--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
     const classKeywords = {
       "Benzodiazepine": ["diazepam", "temazepam", "oxazepam", "lorazepam", "valium", "temaze", "serepax", "ativan"],
       "SSRI": ["sertraline", "fluoxetine", "escitalopram", "citalopram", "zoloft", "prozac", "lexapro", "cipramil"],
-      "Ppi": ["omeprazole", "esomeprazole", "pantoprazole", "lansoprazole", "losec", "nexium", "somac", "zolacid"],
+      "PPI": ["omeprazole", "esomeprazole", "pantoprazole", "lansoprazole", "losec", "nexium", "somac", "zolacid"],
       "Antipsychotic": ["risperidone", "olanzapine", "quetiapine", "haloperidol", "risperdal", "zyprexa", "seroquel", "serenace"],
       "Opioid": ["codeine", "tramadol", "oxycodone", "morphine", "panadeine", "tramal", "endone", "ms contin"],
       "Statin": ["atorvastatin", "simvastatin", "rosuvastatin", "pravastatin", "lipitor", "zocor", "crestor", "pravachol"],
       "Acetylcholinesterase inhibitor": ["donepezil", "rivastigmine", "galantamine", "aricept", "exelon", "reminyl"],
       "Antiplatelet": ["aspirin", "clopidogrel", "dipyridamole", "cartia", "plavix", "persantin"],
-      "Aiguanide": ["metformin", "diaformin", "glucophage", "diabex"],
+      "Biguanide": ["metformin", "diaformin", "glucophage", "diabex"],
       "Calcium channel blocker": ["amlodipine", "felodipine", "nifedipine", "norvasc", "plendil", "adalat"],
       "Insulin": ["insulin glargine", "insulin aspart", "insulin detemir", "lantus", "novorapid", "levemir"],
       "Anticoagulant": ["warfarin", "apixaban", "rivaroxaban", "dabigatran", "coumadin", "eliquis", "xarelto", "pradaxa"],
